# PyLFG

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  BUILD  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  INSTALL.rst  LICENSE  README.md  README.rst  grammar.py  index.html  index2.html  large_lexicon.py  large_lexicon.txt  lexicon.py  lfg_parser.py  pants.toml  parser.py  parser2.py  parser3.py  pos_tagger.py  production_rules.py  pyproject.toml  sample_lexicon.py  test_sentences.py  tests.py  tests2.py  xlfg_index.html
.github/: FUNDING.yml
.github/workflows/: poetry.yml  sign_and_deploy.yml
.pants.d/run-tracker/pants_run_2023_01_28_13_49_18_286_65ac0d84c6c94d9dbcd3033a507b6580/: logs
PyLFG/: TUI.py  TUI2.py  Tui4.py  __init__.py  command.py  fst.py  parse_tree.py  parser.py  parser_gen.py  xle.py  xlfg.py
PyLFG/EN/: annotated_grammar  annotated_grammar.txt  annotated_lexicon.txt  lexicon.txt
PyLFG/ES/: grammar.txt
PyLFG/FR/: grammar.txt
PyLFG/IT/: grammar.txt
PyLFG/TUI/: TUI.py  TUI2.py  TUI5.py  TUI6.py  command.py
PyLFG/WebUI/: main.py
PyLFG/WebUI/templates/: grammar_writing.html  index.html  index3.html  input_view.html  input_view2.html  results_view.html  script.css  (+4 more)
PyLFG/XLE/: basic-parse-tok.fst  common.features.lfg.txt  eng-pargram-morph.fst  eng-pargram.lfg
docs/: BUILD  conf.py  index.rst  modules.rst  requirements_docs.txt  usage.rst
grammars/transfer_rules/: EN_FR_sample.lfg
grammars/xlfg/: F-structures.txt  Technical_xlfg_spec.txt  WebInterface.txt  constraints_on_c-structures.txt  functional_descriptions.txt  xlfg_lexicon.txt  xlfg_spec.txt
pylfg/: __init__.py  fst.py  parse_tree.py  parser.py  parser_gen.py  xle.py  xlfg.py
pylfg/TUI/: TUI7.py  TUI8.py  TUI9.py  Tui3.py
pylfg/transfer/: translator.py
tests/: test_PyLFG.py  test_lfg_parser.py  test_parse_tree.py  test_parser.py  test_sentences.py
transfer/: translator.py
(+14 files in other folders)
