[tool.poetry]
name = "pylfg"
version = "0.1.1a0"
description = "PyLFG is a Python library for working within the Lexical Functional Grammar (LFG) formalism. It provides a set of classes and methods for representing and manipulating LFG structures, including lexical functional structures (f-structures) and c-structures."
authors = ["SekouDiaoNlp <diao.sekou.nlp@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.1"
textual-imageview = "^0.1.1"
textual = "^0.10.1"
click = "^8.1.3"
fastapi = "^0.89.1"
networkx = "^3.0"
matplotlib = "^3.6.3"
PlyPlus = "^0.7.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
bump2version = "^1.0.1"
docutils = "^0.19"
sphinx = "^6.1.3"
furo = "^2022.12.7"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
